--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -11,6 +11,7 @@
     z-index: 40;
     padding: 10px;
     margin-bottom: 10px;
+   
     /* position: sticky;
     top: 0px;
     backdrop-filter: blur(10px); */
@@ -67,10 +68,11 @@
 
 @media (max-width: 768px) {
     .container {
-        flex-wrap: wrap;
+        /* flex-wrap: wrap; */
         justify-content: center;
         padding: 0px 50px 10px 50px; /* Adjust padding as needed */
         height: 160px;
+        flex-direction: row;
     }
 
     .logo {
@@ -88,3 +90,6 @@
 }
 
 
+@media (max-width:480px) {
+    
+}
